app/globals.css
:root {
  --purple-dark: #482880;
  --purple-middle: #673ab7;
  --purple-light: #8561c5;
  --purple-pale: #e1cfff;
  --shadow: #888080;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html {
  height: 100%;
}

body {
  margin: 0;
}

main {
  margin-top: 5rem;
  padding-bottom: 2rem;
  min-height: calc(100vh - 5.6rem - 5rem);
}

html,
body {
  max-width: 100vw;
}

a {
  color: inherit;
  text-decoration: none;
}

